--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -64,38 +64,38 @@ macos-non-native-fullscreen = true
 macos-option-as-alt = true
 working-directory = inherit
 
-# Keybindings optimized for terminal multiplexing
-# These don't conflict with Zellij's default bindings
-keybind = cmd+t=new_tab
-keybind = cmd+w=close_surface
-keybind = cmd+shift+left=previous_tab
-keybind = cmd+shift+right=next_tab
-keybind = cmd+1=goto_tab:1
-keybind = cmd+2=goto_tab:2
-keybind = cmd+3=goto_tab:3
-keybind = cmd+4=goto_tab:4
-keybind = cmd+5=goto_tab:5
-keybind = cmd+6=goto_tab:6
-keybind = cmd+7=goto_tab:7
-keybind = cmd+8=goto_tab:8
-keybind = cmd+9=goto_tab:9
-keybind = cmd+0=goto_tab:10
+# Keybindings - Zellij handles multiplexing, so disable Ghostty tabs/splits
+# Disable tabs
+keybind = cmd+t=unbind
+keybind = cmd+w=unbind
+keybind = cmd+shift+left=unbind
+keybind = cmd+shift+right=unbind
+keybind = cmd+1=unbind
+keybind = cmd+2=unbind
+keybind = cmd+3=unbind
+keybind = cmd+4=unbind
+keybind = cmd+5=unbind
+keybind = cmd+6=unbind
+keybind = cmd+7=unbind
+keybind = cmd+8=unbind
+keybind = cmd+9=unbind
+keybind = cmd+0=unbind
 
-# Split management (if you prefer Ghostty's built-in splits)
-keybind = cmd+d=new_split:right
-keybind = cmd+shift+d=new_split:down
-keybind = cmd+h=goto_split:left
-keybind = cmd+j=goto_split:down
-keybind = cmd+k=goto_split:up
-keybind = cmd+l=goto_split:right
+# Disable splits
+keybind = cmd+d=unbind
+keybind = cmd+shift+d=unbind
+keybind = cmd+h=unbind
+keybind = cmd+j=unbind
+keybind = cmd+k=unbind
+keybind = cmd+l=unbind
 
-# Text selection and copying
+# Keep essential bindings
 keybind = cmd+c=copy_to_clipboard
 keybind = cmd+v=paste_from_clipboard
-
-# Font size adjustment
 keybind = cmd+equal=increase_font_size:1
 keybind = cmd+minus=decrease_font_size:1
-keybind = cmd+0=reset_font_size
-
+keybind = cmd+shift+0=reset_font_size
 keybind = shift+enter=text:\n
+
+# Quit app
+keybind = cmd+q=quit
