feat(ghostty): add quick terminal with hyper+` keybind
Drop-down terminal from top of screen, auto-hides on focus loss.
Also includes settings.json key reorder and nvim plugin updates.

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -104,3 +104,10 @@ keybind = shift+enter=text:\n
 
 # Quit app
 keybind = cmd+q=quit
+
+# Quick Terminal
+keybind = global:ctrl+alt+shift+cmd+grave_accent=toggle_quick_terminal
+quick-terminal-position = top
+quick-terminal-screen = main
+quick-terminal-animation-duration = 0.2
+quick-terminal-autohide = true
